# app/api/openapi.yaml
@@ -190,8 +190,8 @@ paths:
             operationId: getFollowers
             parameters:
                 - name: id
-                  description: User id (if ommited, current user will be used)
                   in: query
+                  description: User id (if not provided, current user is used)
                   required: false
                   schema:
                       type: string
@@ -226,12 +226,7 @@ paths:
             summary: Follow a user
             operationId: follow
             parameters:
-                - name: id
-                  description: User id to follow
-                  in: path
-                  required: true
-                  schema:
-                      type: string
+                - $ref: '#/components/parameters/id_path'
             responses:
                 '204':
                     description: No content
@@ -249,12 +244,7 @@ paths:
             summary: Unfollow a user
             operationId: unfollow
             parameters:
-                - name: id
-                  description: User id to unfollow
-                  in: path
-                  required: true
-                  schema:
-                      type: string
+                - $ref: '#/components/parameters/id_path'
             responses:
                 '204':
                     description: No content
@@ -273,12 +263,7 @@ paths:
             summary: Get a user information
             operationId: getUserInformation
             parameters:
-                - name: id
-                  description: User id
-                  in: path
-                  required: true
-                  schema:
-                      type: string
+                - $ref: '#/components/parameters/id_path'
             responses:
                 '200':
                     $ref: '#/components/responses/userResponse'
@@ -298,37 +283,12 @@ paths:
             summary: Get all or filter recipes
             operationId: listRecipes
             parameters:
-                - name: page
-                  in: query
-                  required: false
-                  schema:
-                      type: integer
-                - name: limit
-                  in: query
-                  required: false
-                  schema:
-                      type: integer
-                - name: category
-                  in: query
-                  required: false
-                  schema:
-                      type: string
-                - name: area
-                  in: query
-                  required: false
-                  schema:
-                      type: string
-                - name: ingredients
-                  in: query
-                  required: false
-                  schema:
-                      type: string
-                - name: owner
-                  in: query
-                  description: Filter recipes by owner
-                  required: false
-                  schema:
-                      type: string
+                - $ref: '#/components/parameters/page_query'
+                - $ref: '#/components/parameters/limit_query'
+                - $ref: '#/components/parameters/category_query'
+                - $ref: '#/components/parameters/area_query'
+                - $ref: '#/components/parameters/ingredients_query'
+                - $ref: '#/components/parameters/owner_query'
             responses:
                 '200':
                     $ref: '#/components/responses/recipeSearchResponse'
@@ -393,12 +353,7 @@ paths:
             summary: Get information about a recipe
             operationId: getRecipe
             parameters:
-                - name: id
-                  description: Recipe id
-                  in: path
-                  required: true
-                  schema:
-                      type: string
+                - $ref: '#/components/parameters/id_path'
             responses:
                 '200':
                     $ref: '#/components/responses/recipeInformationResponse'
@@ -415,11 +370,7 @@ paths:
             summary: Add recipe to favorite
             operationId: addToFavoriteRecipes
             parameters:
-                - name: id
-                  in: path
-                  required: true
-                  schema:
-                      type: string
+                - $ref: '#/components/parameters/id_path'
             responses:
                 '200':
                     $ref: '#/components/responses/recipeSearchResponse'
@@ -453,6 +404,49 @@ paths:
                     $ref: '#/components/responses/serverErrorResponse'
 
 components:
+    parameters:
+        id_path:
+            name: id
+            in: path
+            required: true
+            schema:
+                type: string
+        page_query:
+            name: page
+            in: query
+            required: false
+            schema:
+                type: integer
+        limit_query:
+            name: limit
+            in: query
+            required: false
+            schema:
+                type: integer
+        category_query:
+            name: category
+            in: query
+            required: false
+            schema:
+                type: string
+        area_query:
+            name: area
+            in: query
+            required: false
+            schema:
+                type: string
+        ingredients_query:
+            name: ingredients
+            in: query
+            required: false
+            schema:
+                type: string
+        owner_query:
+            name: owner
+            in: query
+            required: false
+            schema:
+                type: string
     requestBodies:
         createRecipeRequest:
             description: Create recipe request
@@ -532,8 +526,11 @@ components:
                         properties:
                             page:
                                 type: integer
-                            count:
+                            pages:
                                 type: integer
+                            total:
+                                type: integer
+                                description: Total count of recipes
                             recipes:
                                 type: array
                                 items:
@@ -700,7 +697,7 @@ components:
                 description:
                     type: string
                 owner:
-                    $ref: '#/components/schemas/fullUser'
+                    type: string
                 thumb:
                     type: string
         recipeFull:
